<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_e5e5e5"
    android:orientation="vertical">
    <include layout="@layout/top_title_bar_layout" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/driver_line_height"
        android:layout_marginTop="5dip"
        android:background="@color/color_d9d9d9" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff">
        <TextView
            android:id="@+id/basic_info_family_address_tip_tv"
            style="@style/left_text_tip_style"
            android:text="@string/basic_family_address_tip_text"
            />
        <TextView
            android:id="@+id/basic_info_family_address"
            style="@style/right_text_value_style"
            android:layout_toRightOf="@id/basic_info_family_address_tip_tv"
            android:hint="@string/basic_family_address_tip_text"
            android:drawableRight="@mipmap/enter"
             />
        <View
            android:id="@+id/basic_line_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/driver_line_height"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_below="@id/basic_info_family_address"
            android:background="@color/color_d9d9d9" />
        <TextView
            android:id="@+id/basic_info_family_detail_address_tip_tv"
            style="@style/left_text_tip_style"
            android:layout_below="@id/basic_line_one"
            android:text="@string/basic_family_address_detail_tip_text"
            />
        <EditText
            android:id="@+id/basic_info_family_detail_address"
            style="@style/right_text_value_style"
            android:layout_toRightOf="@id/basic_info_family_detail_address_tip_tv"
            android:hint="@string/basic_family_detail_address_text"
            android:layout_below="@id/basic_line_one"
            android:paddingRight="15dip"
            android:maxLines="2"
            />
        <ImageView
            android:id="@+id/basic_detail_address_choose_Iv"
            android:layout_width="15dip"
            android:layout_height="@dimen/common_edit_text_height"
            android:layout_marginRight="@dimen/common_margin"
            android:layout_alignParentRight="true"
            android:layout_below="@id/basic_line_one"
            android:visibility="invisible"
            android:src="@mipmap/m_icon_map"/>
        <View
            android:id="@+id/basic_line_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/driver_line_height"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_below="@id/basic_detail_address_choose_Iv"
            android:background="@color/color_d9d9d9" />





        <TextView
            android:id="@+id/email_title"
            style="@style/left_text_tip_style"
            android:layout_below="@id/basic_line_two"
            android:text="邮箱"
            />
        <EditText
            android:id="@+id/email_ed"
            style="@style/right_text_value_style"
            android:layout_toRightOf="@id/email_title"
            android:hint="请输入您的邮箱"
            android:layout_below="@id/basic_line_two"
            android:inputType="textEmailAddress"
            android:paddingRight="15dip"
            android:maxLines="2"
            />


        <View
            android:id="@+id/dvi3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/driver_line_height"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_below="@id/email_ed"
            android:background="@color/color_d9d9d9" />



        <RadioGroup
            android:id="@+id/basic_marry_Rg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_edit_text_height"
            android:layout_below="@id/dvi3"
            android:layout_marginLeft="@dimen/common_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:checkedButton="@+id/basic_already_married_Rb">
            <RadioButton
                android:id="@id/basic_already_married_Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textSize="@dimen/text_size_15"
                android:drawablePadding="5dip"
                android:drawableLeft="@drawable/common_checkbox_btn_bg"
                android:text="@string/basic_already_married_text"/>
            <RadioButton
                android:id="@+id/basic_not_marry_Rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dip"
                android:button="@null"
                android:textSize="@dimen/text_size_15"
                android:drawablePadding="5dip"
                android:drawableLeft="@drawable/common_checkbox_btn_bg"
                android:text="@string/basic_not_marry_text"/>
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff">

        <TextView
            android:id="@+id/basic_info_link_name_tip_tv"
            style="@style/left_text_tip_style"
            android:text="@string/basic_link_name_text"
            />

        <EditText
            android:id="@+id/basic_info_link_name"
            style="@style/right_text_value_style"
            android:layout_toRightOf="@id/basic_info_link_name_tip_tv"
            android:hint="@string/basic_link_name_tip_text"
            android:maxLength="12"/>

        <View
            android:id="@+id/basic_line_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/driver_line_height"
            android:layout_below="@id/basic_info_link_name"
            android:layout_marginLeft="@dimen/common_margin"
            android:background="@color/color_d9d9d9"/>

        <TextView
            android:id="@+id/basic_info_link_phone_tip_tv"
            style="@style/left_text_tip_style"
            android:layout_below="@id/basic_line_three"
            android:text="@string/basic_link_mobile_text"
            />

        <EditText
            android:id="@+id/basic_info_link_phone"
            style="@style/right_text_value_style"
            android:layout_below="@id/basic_line_three"
            android:layout_toRightOf="@id/basic_info_link_phone_tip_tv"
            android:hint="请选择联系人电话"
            android:inputType="number"
            android:editable="false"
            android:focusable="false"
            android:maxLength="11"/>

        <ImageView
            android:id="@+id/basic_mobile_choose_Iv"
            android:layout_width="15dip"
            android:layout_height="@dimen/common_edit_text_height"
            android:layout_alignParentRight="true"
            android:layout_below="@id/basic_line_three"
            android:layout_marginRight="@dimen/common_margin"
            android:src="@mipmap/m_icon_address_book"
            android:visibility="visible"/>

        <View
            android:id="@+id/basic_line_four"
            android:layout_width="match_parent"
            android:layout_height="@dimen/driver_line_height"
            android:layout_below="@id/basic_info_link_phone"
            android:layout_marginLeft="@dimen/common_margin"
            android:background="@color/color_d9d9d9"/>

        <TextView
            android:id="@+id/basic_info_link_relationship_tip_tv"
            style="@style/left_text_tip_style"
            android:layout_below="@id/basic_line_four"
            android:text="@string/basic_link_relationship_text"
            />

        <TextView
            android:id="@+id/basic_info_link_relationship"
            style="@style/right_text_value_style"
            android:layout_below="@id/basic_line_four"
            android:layout_toRightOf="@id/basic_info_link_relationship_tip_tv"
            android:drawableRight="@mipmap/enter"
            android:hint="@string/basic_link_relationship_tip_text"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/driver_line_height"
        android:layout_marginTop="5dip"
        android:background="@color/color_d9d9d9" />

    <Button
        android:id="@+id/basic_info_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_height"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/common_button_selector"
        android:gravity="center"
        android:text="@string/next_step_text"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/text_size_17" />

</LinearLayout>
