<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/face_face_tip_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dip"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="130dip"
        android:layout_height="130dip"
        android:layout_gravity="center_horizontal"
       >

        <ImageView
            android:id="@+id/face_tip_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/face_result_success" />
    </FrameLayout>

    <TextView
        android:id="@+id/face_tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:text="@string/face_tip"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/T3" />

    <LinearLayout
        android:id="@+id/face_tip_ll_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="25dip"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/face_icon_hap"
            android:gravity="center"
            android:text="@string/face_tip_one"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/T3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/face_icon_glasses"
            android:gravity="center"
            android:text="@string/face_tip_two"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/T3" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/face_icon_light"
            android:gravity="center"
            android:text="@string/face_tip_three"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/T3" />
    </LinearLayout>

</LinearLayout>